feat: Implement listFilesChangedBetweenBranches and use in PR dialog